--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <script type="text/html" id="person_item_template">
         <tr>
             <td><span class="name"><%= name %></span></td>
-            <td><button class="btn_edit person_<%= id %>">Edit</button></td>
+            <td><button class="<%= id %> btn_edit">Edit</button></td>
         </tr>
     </script>
 
