--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </script>
 
     <script type="text/html" id="person_item_template">
-        <tr>
+        <tr class="person_<%= id %>">
             <td><span class="name"><%= name %></span></td>
             <td><button class="<%= id %> btn_edit">Edit</button></td>
         </tr>
