--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     </script>
 
     <script type="text/html" id="person_item_template">
-        <tr class="person_<%= id %>">
-            <td><span class="name"><%= name %></span></td>
+        <tr>
+            <td><span class="person_<%= id %> name"><%= name %></span></td>
             <td><button class="<%= id %> btn_edit">Edit</button></td>
         </tr>
     </script>
